[tool.poetry]
name = "DataSecurity"
version = "0.1.0"
description = ""
authors = ["Lucía Cabanillas Rodríguez"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
opa-python-client = "^1.3.7"
python-multipart = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
