[tool.poetry]
name = "Data Security Service"
version = "1.1.1"
description = "Data Security Service component of the Data Fabric."
authors = ["Lucía Cabanillas Rodríguez", "David Martínez García"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
opa-python-client = "^1.3.7"
python-multipart = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
